--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "bundle/markdown"]
 	path = bundle/markdown
 	url = https://github.com/plasticboy/vim-markdown.git
+[submodule "bundle/ir_black"]
+	path = bundle/ir_black
+	url = https://github.com/twerth/ir_black
+[submodule "bundle/vim-colors-ir_black-256"]
+	path = bundle/vim-colors-ir_black-256
+	url = https://github.com/msutherl/vim-colors-ir_black-256
